syntax = "proto3";

service LobbyService {
  rpc GetById (LobbyIdRequest) returns (Lobby);
  rpc GetByName (LobbyNameRequest) returns (Lobby);
  rpc CreateLobby (LobbyNameRequest) returns (Lobby);
  rpc GetMembersLobby (MemberIdRequest) returns (Lobby);
  rpc EnterMember (MemberIdLobbyIdRequest) returns (EmptyResponse);
  rpc LeaveMember (MemberIdLobbyIdRequest) returns (EmptyResponse);
  rpc StartPoker (LobbyIdThemeRequest) returns (EmptyResponse);
  rpc CancelPoker (LobbyIdRequest) returns (EmptyResponse);
}

message LobbyIdRequest {
  int32 lobby_id = 1;
}

message Lobby {
  int32 id = 1;
  string name = 2;
  string current_theme = 3;
  LobbyState state = 4;
}

enum LobbyState {
    Waiting = 0;
    Playing = 1;
}

message LobbyNameRequest {
  string lobby_name = 1;
}

message MemberIdRequest {
  int32 member_id = 1;
}

message MemberIdLobbyIdRequest {
  int32 member_id = 1;
  int32 lobby_id = 2;
}

message LobbyIdThemeRequest {
  int32 lobby_id = 1;
  string theme = 2;
}

message EmptyResponse {}



service MemberService {
  rpc GetById (MemberIdRequest) returns (Member);
  rpc GetMembersLobbyId (MemberIdRequest) returns (NumberResponse);
  rpc IsMemberInLobby (MemberIdRequest) returns (BoolResponse);
  rpc PutCard (MemberIdCardCodeRequest) returns (EmptyResponse);
  rpc RemoveCard (MemberIdRequest) returns (EmptyResponse);
}

message MemberIdCardCodeRequest {
  int32 member_id = 1;
  CardCode card_code = 2;
}

enum CardCode {
  Score0 = 0;
  Score1 = 1;
  Score2 = 2;
  Score3 = 3;
  Score5 = 4;
  Score8 = 5;
  Score13 = 6;
  Score20 = 7;
  Score40 = 8;
  Score100 = 9;
  DontKnow = 10;
  Skip = 11;
}

message Member {
  int32 id = 1;
  string name = 2;
}

message NumberResponse {
  int32 result = 1;
}

message BoolResponse {
  bool result = 1;
}